# ChangeLog for dev-libs/gmp
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmp/ChangeLog,v 1.169 2012/05/22 23:12:49 vapier Exp $

  22 May 2012; Mike Frysinger <vapier@gentoo.org>
  +files/gmp-5.0.5-x32-support.patch, gmp-5.0.5.ebuild:
  Redo x32 patch for newer versions.

*gmp-5.0.5 (06 May 2012)

  06 May 2012; Mike Frysinger <vapier@gentoo.org> +gmp-5.0.5.ebuild:
  Version bump.

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> gmp-5.0.4.ebuild:
  keyword ~amd64-fbsd

  13 Feb 2012; Kacper Kowalik <xarthisius@gentoo.org> gmp-5.0.2_p1.ebuild:
  ppc64 stable wrt #395193

*gmp-5.0.4 (10 Feb 2012)

  10 Feb 2012; Mike Frysinger <vapier@gentoo.org> +gmp-5.0.4.ebuild:
  Version bump.

  01 Feb 2012; Brent Baude <ranger@gentoo.org> gmp-5.0.2_p1.ebuild:
  Marking gmp-5.0.2_p1 ppc for bug 395193

  28 Jan 2012; Mike Frysinger <vapier@gentoo.org> gmp-5.0.3.ebuild:
  Fix unpack with USE=doc #401161 by Marien Zwart.

*gmp-5.0.3 (27 Jan 2012)

  27 Jan 2012; Mike Frysinger <vapier@gentoo.org> +gmp-5.0.3.ebuild:
  Version bump.

  03 Jan 2012; Mike Frysinger <vapier@gentoo.org> gmp-5.0.2_p1.ebuild:
  Mung the libgmp.la references in libgmpxx.la #397389 by David Leverton.

  01 Jan 2012; Raúl Porcel <armin76@gentoo.org> gmp-5.0.2_p1.ebuild:
  ia64/m68k/s390/sh/sparc/x86 stable wrt #395193

  26 Dec 2011; Markus Meier <maekke@gentoo.org> gmp-5.0.2_p1.ebuild:
  arm stable, bug #395193

  23 Dec 2011; Matt Turner <mattst88@gentoo.org> gmp-5.0.2_p1.ebuild:
  alpha stable, bug #395193.

  20 Dec 2011; Jeroen Roovers <jer@gentoo.org> gmp-5.0.2_p1.ebuild:
  Stable for HPPA (bug #395193).

  18 Dec 2011; Agostino Sarubbo <ago@gentoo.org> gmp-5.0.2_p1.ebuild:
  Stable for AMD64, wrt bug #395193

  18 Dec 2011; Mike Frysinger <vapier@gentoo.org> gmp-5.0.2.ebuild:
  Mark ppc64 stable #380675.

  08 Dec 2011; Mike Frysinger <vapier@gentoo.org>
  files/gmp-5.0.2-x32-support.patch: