@@ -1,38 +1,32 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX 4.2.1/aix.m4-RW.diff 529 RMD160 33b9e308733fda096601efdaab15764796484fca SHA1 82978580fc9819c246f975598d276a02f529b957 SHA256 0636df524109a52e9705355952097017242ade4527a0fbb0961fd288334c9ded
-AUX 4.2.4/mpf_eq.diff 9252 RMD160 52036e74d5d118db1fd0ad844ba871249fdbaefc SHA1 5fe6dd4dba6574baf3db8f3d2a16fbd73dc295e1 SHA256 8d82a1ce2e891e689da2cad1d4536090b7cd73b1201cb431b53f721f7485771f
-AUX 4.2.4/mpf_set_str.c.4.diff 860 RMD160 03015e15518bdd5887d09f8b3fb12f9c8d2b4beb SHA1 b14fc8b7644183e021406f05b5e168589d9acd1d SHA256 57d84908888f71e6cb282fce869b588bcd1051aa779cc692a62496d50ed3df58
-AUX 4.2.4/perfpow.c.diff 4335 RMD160 92f72686e91a9224bc743080dafbc501a8421e01 SHA1 e8602c1d481016e4e92d74441310ec5f1cefde83 SHA256 3a097f48b62d3b9f377df82c6cae7ea46191818c355d4dade89eaef1a14defeb
-AUX gmp-4.1.4-noexecstack.patch 474 RMD160 22aa94eded1650432202b93a79900be1c85a779b SHA1 fd7ca0feb59aa319ba30bdbc71b7796a0a457d76 SHA256 68601777151a1628d7bc839eddd037685c5d2e76c9453166890a5eb3cf6000c3
-AUX gmp-4.2.1-s390.diff 1848 RMD160 04eecb2aaae4c444841e40b33abd38a662254632 SHA1 38ba90ffd6cd9d66e07c5f71b4608e3ad9d32a6b SHA256 13c6b01e71534af2c353d79b7afd171f158b8fa6e3299e0f7c0335e516ce67ec
-AUX gmp-4.2.3-ABI-multilib.patch 12456 RMD160 d225bac7ea2d152bfecf8ce3b887b35a70f09eb4 SHA1 8b9ec5d278db0d1c925c8eff337126c4f9986547 SHA256 5656454b0330686984e012129c0d5889ab9d161e514d69de34b5a2eaa7383d6a
-AUX gmp-4.3.0-ABI-multilib.patch 12467 RMD160 5c0e45719739de5ed63066a169e88acbcb8f025d SHA1 464605ae9d436dac201bc27dd83c7d2ea0587d6d SHA256 752e40fc252f2f0595938f1b05439c4394a68a5e9fc87252752a2dbd98b802c9
-AUX gmp-4.3.1-fix-broken-ansi-check.patch 335 RMD160 454b46c06996a2b35a67e0115b74e316bb3ab15c SHA1 47dfead3fb075c818f29c8a473a28674ceee9b61 SHA256 188507d31dd38a870e54456f940bc240fc1fb24ef16bf84fa2715112b27cc63c
-AUX gmp-4.3.2-ABI-multilib.patch 8883 RMD160 e6a41f288643af4a518ecc19ca5b04eb7f59a8a6 SHA1 4bb36169fd5d0e768b91a92194c6937680ab4b84 SHA256 772c003810d5f8073e6c2b6fea4ba7dfe38d7f7b14c25995be7d1ee7f45ab59f
-AUX gmp-5.0.0-s390.diff 1839 RMD160 2b83f296906a7a15add19b126f73059571b8880e SHA1 f5ca3a792c89384d3e7dd5ff36041b5d679ed76f SHA256 e4ca88304a072ad29387ad7893efc28ee2ce600dfe020f35f80e939c83c31b0c
-AUX gmp-5.0.1-perfpow-test.patch 1071 RMD160 1af4778602a55cda15763687329348c5ebd6f2fb SHA1 3f3ecf0b97d6b70e36bd0179f45b436e7c41d7e5 SHA256 a2fec6646f36d49dbeda9a520d682a26e560d1c3a5f78f3537d1889a71eb8e1f
-AUX gmp-5.0.1-x86-nopie-tests.patch 3798 RMD160 2086849c394e35753ca84a464ac9e0c32165fd23 SHA1 97a0ce472b36754ecdd5416bd7c5a2aad4766087 SHA256 3f108ece1cf1f18afd8a36f2b9f03eeb32afa9c4937c707bce840bd62824a61a
-AUX gmp-5.0.2-unnormalised-dividends.patch 682 RMD160 feb31d040fdfedf4212e86676be92b2adf852c76 SHA1 81ca793feccb31e322d0791a4946f79c4b7c8e92 SHA256 6d7c4f4d9eaba14ac6d3364f26e849963be3149727cbfe5ee64cc588587dd8c5
-AUX gmp-5.0.2-x32-bugfix.patch 3213 RMD160 ca051f09a8b38982c148d7f4c8cdde1c2da5d5bc SHA1 0d02223d42df385186341ffd71b2f44cde590b72 SHA256 d83142808943778f95d37c416a53a369f0e6acd39bd5f8e77bb08efcb4623a25
-AUX gmp-5.0.2-x32-support.patch 854 RMD160 58d3b67e7c82ee48d2c78a0b700d77e3d8caad97 SHA1 6af38676700f1fd0ade1ab341dbad8080d5bbd67 SHA256 3eb0e6f511adc1efd61208955254e2c205705eabf74ac062939b14fc4b026b66
-AUX gmp-5.0.5-x32-support.patch 814 RMD160 92ff3cdfb1a709e111b9d743a2593637215efe3a SHA1 2c53f6e3a2981c75c5f9d3fd569677a06a3cae5f SHA256 14c4fce531809942441e032fe9dc19ab904e39fc3405689b9dfff96ceb5291c0
-DIST gmp-5.0.1.tar.bz2 2006109 RMD160 3e89ebf5294639e1c926b92d9786bbdd0c8fa587 SHA1 6340edc7ceb95f9015a758c7c0d196eb0f441d49 SHA256 a2a610f01fd3298dc08c87bf30498c2402590e1bcb227fc40b15ee6d280939fb
-DIST gmp-5.0.2.tar.bz2 2024576 RMD160 fce06e3246f067301a54f3457960f1d6d71adfc2 SHA1 2968220e1988eabb61f921d11e5d2db5431e0a35 SHA256 dbc2db76fdd4e99f85d5e35aa378ed62c283e0d586b91bd8703aff75a7804c28
-DIST gmp-5.0.5.tar.xz 1671264 RMD160 d374e5505c6c61e582f64de864ea1d05b91971ba SHA1 4e006dd5e473f21d414b88997630122662ddc2be SHA256 e87015a825a2445e169931ee27849d52576a2d9e338d1383dcb36fed68d0006f
-DIST gmp-man-5.0.2.pdf 1024222 RMD160 8b109ab46248d2cc3eaa383a10921558c6eb657f SHA1 bccd7089b9a355c102770ce98534d581af8a1a42 SHA256 fcdd621dea0215b8920bdbfacf374ae8ef4f548a2d0c3e8d65d904f1b9d174d4
-DIST gmp-man-5.0.5.pdf 1162914 RMD160 5b7430442da6af84c43879ce130433f144385455 SHA1 c03c8d7154fa96be5b50eb84e858d1c55992d24f SHA256 33c7456155bf39704eb1c874849315a925140014b4ad8a8c6f0e07e4fde6a9f2
-EBUILD gmp-5.0.1.ebuild 2611 RMD160 a5ce2c0b25ada3f12591a89fef52f482fe4e7ecb SHA1 640164c6d24073be034d15bec132db71ae9d8c9a SHA256 1a53a0c1c351ebbb1098f153ae99160bc80b3fcb6255840298d2081db73be9a5
-EBUILD gmp-5.0.2.ebuild 2653 RMD160 4d6e79d1d97a1f3f99ecf56c51adbbe14bc16f2c SHA1 604ce9b392fa64ebcb2cf41d405f735fb7b9af73 SHA256 d953a02c8919cffd4dde2579285766c2182dba6a73f98c1e62903a41380ca1a1
-EBUILD gmp-5.0.2_p1.ebuild 3104 RMD160 62a502f737c19672af25decc641b0a2e8e397f97 SHA1 f1f9dbd56b85415047030672a76fbc605fbf73de SHA256 45fd1305ef5d0c6864ec88d95ffb5ab2bb16ef4a7bdb2da27a57044b84a568d9
-EBUILD gmp-5.0.5.ebuild 2997 RMD160 aa0abb390225548de5213e6263a0a7d87c822afe SHA1 a19937ddb67e8452cb3d973c3ee8c4ab73a86737 SHA256 3493d26d11af023c19c24b90fdedb255b0ffd672fa72ca55f6f33c06ad9d9083
-MISC ChangeLog 22428 RMD160 e3b2ed28afc0d79337330a16fa2ba0258ab9e541 SHA1 32a51826f7c27cda6b7efa63961d6e2f692b3585 SHA256 931f60cc8cf5f7a830385deda35c61b0766151a170e87db2ce19ce67bb3ee34a
-MISC metadata.xml 162 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 SHA1 d6b4923897f6ae673b4f93646f5b4ba61d5a2c3c SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a
+AUX 4.2.1/aix.m4-RW.diff 529 SHA256 0636df524109a52e9705355952097017242ade4527a0fbb0961fd288334c9ded SHA512 70436f993b00e508dc04cfd241e8d679f9d965a9e695d85eb1d13415b853b092f8cee72c6bb0bc397572c924abaf19359bda49eed875160af0f786b2eb2f9516 WHIRLPOOL 74d1208eec2c9ed66749eac74fe195bc7453d2b4fa558d1c119b2c96ac31ddf12b6e7056a4a26eece1a0f91d98c958886ebb2c49d57fa4b43ed18784cb08c251
+AUX 4.2.4/mpf_eq.diff 9252 SHA256 8d82a1ce2e891e689da2cad1d4536090b7cd73b1201cb431b53f721f7485771f SHA512 0f77bfeca3980ac22cc1cc4635150fcac428766e9616b640d064f3657e25f45432290513afca48ee301cf2140f85560d288130c8f5e1bcc8e6e529fcc6cf8012 WHIRLPOOL 237bf841df0084702d4fb10f3f3eeb11cab445ace0f7025fbee03f8ea932dd008ffd84835952be46649d05bf9b4db8206ca6dc5e68c42f40cbb6cbfbd83ee431
+AUX 4.2.4/mpf_set_str.c.4.diff 860 SHA256 57d84908888f71e6cb282fce869b588bcd1051aa779cc692a62496d50ed3df58 SHA512 22a99fa963760af6c6f3a8dd499093c0639cc222097702af30663f06f006cb059e8fba372120188700db14337a9c5055b473b3ae1c8e8124a307a9bf41e82837 WHIRLPOOL 1f04d07c4e98dc5da7b33d0cfc0c99ba4b555fe3872135c67d3b09e062b7a110552743b4bb6701b19ea35d1affab0b0a3181347fdf2001fc417ec351acb58657
+AUX 4.2.4/perfpow.c.diff 4335 SHA256 3a097f48b62d3b9f377df82c6cae7ea46191818c355d4dade89eaef1a14defeb SHA512 f3a61dd71f6f0fb6f14700a50bf84a9dc512197c81cf9cfeb1d7ab6a519ce1b987a021e39e679fa08ce170bbfcb1e9531a2086e702a59425342e7625aef4cfab WHIRLPOOL 952a97a8ff4c845132baf23f5a441b8142f990877afcbe61d41be61caff0e30920c0f5143c68781cef7af56f88c181849fb520398a1419121ac914301f13f6b6
+AUX gmp-4.1.4-noexecstack.patch 474 SHA256 68601777151a1628d7bc839eddd037685c5d2e76c9453166890a5eb3cf6000c3 SHA512 74b8b68061a1a5ac0f8b163974834465e86e930884e1a9cd15c4c948fdae95ffdcbb6e0210d56df6d0dcf1ccbe13dbdfe45552e645c3fdea6454747731b63bc8 WHIRLPOOL d8a0f81d4e97f6996bf68dd3d5488762e221f43a26e1cbff27adb372a40075d35fbb0e956ccd45c8b320a900d284f16d0649293cc907daab45d02cb30e74373b
+AUX gmp-4.2.1-s390.diff 1848 SHA256 13c6b01e71534af2c353d79b7afd171f158b8fa6e3299e0f7c0335e516ce67ec SHA512 ab13186cfdb2a217edb5bd77379d68442685319ec3ca5b9ccadd67a68356f56881ea5feb7dbd40821d6587553d46b63b19ba454a9e3ede27baf72a6857169c44 WHIRLPOOL c2c4727cd1e9a18529ecd44e1d7b2eb758bf0b6f81706024fd271d368ec9f6c0c36ffef352191168d9511a104ab40f51df730c287e03f8acda2ba572079abdf8
+AUX gmp-4.2.3-ABI-multilib.patch 12456 SHA256 5656454b0330686984e012129c0d5889ab9d161e514d69de34b5a2eaa7383d6a SHA512 e44f939654f6dbc3eca86565778f4afc81bb978beaa906d4670ec1dbf2ea66e1e9887ce785d83657bdfd0073362fafafd8f4c02e7b0abf91e91eab188054dfdf WHIRLPOOL 1242d93e1b6e851f1697ca81089684ab5ffe193bdeba7f75f89f1a6fc482ee5c7422ba7efbd1a501e92db4cbd036411415e0dd4e4717766c76459f5f2e749d3d
+AUX gmp-4.3.0-ABI-multilib.patch 12467 SHA256 752e40fc252f2f0595938f1b05439c4394a68a5e9fc87252752a2dbd98b802c9 SHA512 71ecacab5dfd8fdb3f11cee225c40029f529074768a8c18aa036237439c96270a134190ba6b708df8f8ebcd67b86efd083401d0550636bf3a17f15b2ef12d862 WHIRLPOOL 80edbaf91a919a90b5d767d01a550381e0e0199cf4d021058494fda46ebc0bbd12b5c358ec49e4245c7f53b5c9b4d29730558525dcc093449502f3ae6756b49e
+AUX gmp-4.3.1-fix-broken-ansi-check.patch 335 SHA256 188507d31dd38a870e54456f940bc240fc1fb24ef16bf84fa2715112b27cc63c SHA512 ecc717084d38932194a5c6afbcb59e6ca74aa4e3d577145e750d1ffd701e325c18e887b385c7f6252549be0d73b987900dc603bb911c85475b3a846c36622511 WHIRLPOOL 23c932f39e28b10d4de7b54614506c4ea719711da6ae8e6216892065145e95b59273f19a9315a3d22de49448333d41d7746ce4c39ef569dd697c643ef64dc520
+AUX gmp-4.3.2-ABI-multilib.patch 8883 SHA256 772c003810d5f8073e6c2b6fea4ba7dfe38d7f7b14c25995be7d1ee7f45ab59f SHA512 784b90318185a9801b02ef041ce642bb21928fcd3cf8bc9d9e2e6036a68b486a5f7c8ddd7a1460413035b715508ad4eeda18c5b3be434abf1ed4cc72be0c31b6 WHIRLPOOL 193b1d3c5d2dd534a5a01d511adca8dfcddbab91ebee0bfe65e01c6b0fdf99152e2697380638505e8dc3632098ef4d189dbea602a01dec07511976ca0761f528
+AUX gmp-5.0.0-s390.diff 1839 SHA256 e4ca88304a072ad29387ad7893efc28ee2ce600dfe020f35f80e939c83c31b0c SHA512 eaca6e4e201b6e76db7f6eeb446379d4cb18fa259b1370be6a5867007ea1de114eb7f234b465695e44547f0c8943450de056215f0637ab2dbe24f60dc630dcc1 WHIRLPOOL 2deecc79153ca98042180b589d94758cfeb63f685d9d4a134666eb3c646729ec5b2f82a291166224c16541ec1fec0d310091488f5e32f706f8fbfe93e50037ed
+AUX gmp-5.0.1-perfpow-test.patch 1071 SHA256 a2fec6646f36d49dbeda9a520d682a26e560d1c3a5f78f3537d1889a71eb8e1f SHA512 c5919bbb05ed3ec73516b685b8a7352b25b3ffc384abf31d873e8bc8952e7bb723a215fa5a5ff71e69829e22e249fe014b50461841074bba3b3a108d2c01a0ec WHIRLPOOL aa485410086f57de79d7ef6f5d1a44ee3ab8df9660cfa8259f8835b80b6d7ec82cad2cdef7b0858bd1807f38ff3287426c2a3a51bab9f214e0c5514ff480c181
+AUX gmp-5.0.1-x86-nopie-tests.patch 3798 SHA256 3f108ece1cf1f18afd8a36f2b9f03eeb32afa9c4937c707bce840bd62824a61a SHA512 5f6d8621a25605001dc8a16fe9de5f01ad840c9ef086867025d6a6fe4066b3a58ed4b0d4d67fe0d5add12a7eb9d5c3596eb0cb17994e2a97b12cd75f0c3acbd3 WHIRLPOOL aec85d5c1333f701bd123cd47530aa96920b316ac33e4244c5dcb70ea4ee1c71ffb394397d75d2362a448fd1298d1aea1c389bfcde5d5dec3452384d6af74ff7
+AUX gmp-5.0.2-unnormalised-dividends.patch 682 SHA256 6d7c4f4d9eaba14ac6d3364f26e849963be3149727cbfe5ee64cc588587dd8c5 SHA512 970c6ce8e5a54fc6f0d1295f793ba2f51f333e1ba226f2625972257909510dfbdb0681014c3f101a0f04aee2e93e1ce44be66b4303584a8eafd1d187d112a460 WHIRLPOOL 97e54a027a716a68c41b195aadb577cc19fb89b11a7cd0b2087483744229834e428175fb83499e21dccd669e8d308aa7e255d4dc74b2b32b47256c7207c30a5e
+AUX gmp-5.0.2-x32-bugfix.patch 3213 SHA256 d83142808943778f95d37c416a53a369f0e6acd39bd5f8e77bb08efcb4623a25 SHA512 4f2121e48e61e0ed27dddbdbecc6ccb9eb1907ca89685a3e05b5c2a13f77d53e5611afd91bf71c014d4a421e6708ab04ffbcc2484e4e1047e6cf4ca94d60f4de WHIRLPOOL fd1dddcf002714cfbe624eb7dbb8124fccdd6aff63de6463826ba6e906da52f8476eb819709b4a6a35026d50b5cfdeb6af23fa071c38e76ec46508d169a60c33
+AUX gmp-5.0.2-x32-support.patch 854 SHA256 3eb0e6f511adc1efd61208955254e2c205705eabf74ac062939b14fc4b026b66 SHA512 901eb8f32214a6e522c43aeee12a1cedca261364a739f795b30aea65c724df97f9ec49326e93aac3b9537300e57da3528d009778d3dec372805e82ccdc66964e WHIRLPOOL dc74a3783394516d8c9c8fbded0bc7301efbc430d590a740c5b88bfe64cab664f316559a100433bbcde3f8cb5f706ddb1cc261973a5c1dffd647fa30f7631a7b
+AUX gmp-5.0.5-x32-support.patch 814 SHA256 14c4fce531809942441e032fe9dc19ab904e39fc3405689b9dfff96ceb5291c0 SHA512 33715037c9d9c6eb163e02f310a5acaa71e3e223695aacd8d89876ec7cf6c7f0e46f5c06de80b3e505adeb22042a0402368a3da8dba723c3d71ed2fd9106a3ac WHIRLPOOL 07fac2080d5f8ce9c7e71d7047f10999379683fbd495fbd16780a6c1c75cecaaa560251455c4d18c7c9e7873b68a0090b91badeb2e4ceea2b948b76ee445e1c9
+DIST gmp-5.0.5.tar.xz 1671264 SHA256 e87015a825a2445e169931ee27849d52576a2d9e338d1383dcb36fed68d0006f SHA512 79f69ed7959af18e626d4b21b5707ebd7701261ebc2cc9f78fa03c5efa9eb1c1aef2ba8728cdbc34fb09ba333aeba0f88ba7e4d87d6a93b21f936f9d8ee1174a WHIRLPOOL c224f0ce28762e8987b5c5a817d24412d1c85e7bab2f173b138f463cc380d85ab02585d4c2a0e5052c34a405e6cec1f744edb0ee525002d6b77584ff6ecb601b
+DIST gmp-man-5.0.5.pdf 1162914 SHA256 33c7456155bf39704eb1c874849315a925140014b4ad8a8c6f0e07e4fde6a9f2 SHA512 2207266e1187f9951e01f02c6c70eb8bde78fd8d748f144c1bcb10702510f79ee9dd698347d80cac2445112c1554919e734dafd48ebc4662e39b9031b3147544 WHIRLPOOL 1becb075143db9fb26662fed68f760624d381306831a9a58234d5e82303290497bb7b99582a1ab77bd8a72de70e97b516e113264aa307774a4632faf223624c8
+EBUILD gmp-5.0.5.ebuild 2951 SHA256 e711a699a19eb5ea96dfed02c4456d23cde22883ab724d2dd38cdb0da5261476 SHA512 db8960512d3835f880c50c583c37a34d163c881a2e4be66a460df8714c7333d8e6be64ee8ab6eee36c1a6894ce7d4cb5072de6300f509ffb387af484876db0c0 WHIRLPOOL c8db9b7bf86a04e619813c6ff6a139e28b743fb82cca1826e351ea9f3555f01984e04bd2d14723f8fa6622d57c5651a0a974df47de99aa2af5131d2768fcbee8
+MISC ChangeLog 22608 SHA256 f360a545b41e969d3d3fc5ff22a1970804acf411b41cbe36ee4acd5cf3dd78d9 SHA512 1e8b97bdeceee9329f063603f0f0f889b879d10480b0d7228251238517850d2357a21f7e62c7e8691bc59bccd98bb3134dbfcb4d3dadbb97d137e5d66cf680e8 WHIRLPOOL d8623757bfac28c903ea44595f7a19a59eabc8a926500cf97d2ff2302bea17baabde3af5729290321c0c493e28d6e67049afc86d378eff341d5bb99e984831c0
+MISC metadata.xml 162 SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a SHA512 2a857e10b277827773a6c7967e070d7bfff23d75f44fa4d4fa8a7339df3225e6dba512a865d91c9c55bdb013dafdce85dface1b845acfbb5473e232666cdda45 WHIRLPOOL f7586c1570803b3e646f0be89ba6c767e82ec6889ef92d15f62a38f1410ed9d82c36892e5e83f694471959783d0d5ad667f1a39b7eb51f2080c269d5fa23d819
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (SunOS)
+Version: GnuPG v2.0.19 (Darwin)
 
-iEYEARECAAYFAk/CB4MACgkQX3X2B8XHTon6GwCeMdPZ1VOqDPNwU53UG2iV/zJj
-Q+sAni9EUYB1iEgyuExT9+Qecvtw6WD0
-=xCmL
+iEYEAREIAAYFAlC8/d8ACgkQX3X2B8XHTonjFQCfQ967+RUqR3u/TXY49f3Qmiu9
+c9YAn0TSLTmHbjGP8V+FU1WzF30dbAKF
+=7uTO
 -----END PGP SIGNATURE-----
