@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-libs/gmp/ChangeLog,v 1.169 2012/05/22 23:12:49 vapier Exp $
 
+  03 Dec 2012; Fabian Groffen <grobian@gentoo.org> -gmp-5.0.1.ebuild,
+  -gmp-5.0.2.ebuild, -gmp-5.0.2_p1.ebuild, gmp-5.0.5.ebuild:
+  Align ebuild with gx86, fixes nocxx/cxx issue
+
   22 May 2012; Mike Frysinger <vapier@gentoo.org>
   +files/gmp-5.0.5-x32-support.patch, gmp-5.0.5.ebuild:
   Redo x32 patch for newer versions.
